--- a/package/kernel/rtl8192eu/Makefile
+++ b/package/kernel/rtl8192eu/Makefile
@@ -29,6 +29,7 @@ define KernelPackage/rtl8192eu
 endef
 
 NOSTDINC_FLAGS:= \
+	$(KERNEL_NOSTDINC_FLAGS) \
 	-I$(PKG_BUILD_DIR) \
 	-I$(PKG_BUILD_DIR)/include \
 	-I$(STAGING_DIR)/usr/include/mac80211-backport \
