i40e: download from sourceforge
Signed-off-by: Tianling Shen <cnsztl@immortalwrt.org>

--- a/package/kernel/i40e/Makefile
+++ b/package/kernel/i40e/Makefile
@@ -10,7 +10,7 @@ PKG_VERSION:=2.22.18
 PKG_RELEASE:=1
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
-PKG_SOURCE_URL:=@IMMORTALWRT
+PKG_SOURCE_URL:=@SF/e1000/i40e%20stable/$(PKG_VERSION)/
 PKG_HASH:=ba3fed07b178bc78bfeab3ba309f812243cbc88032333edca891eb74022468f6
 
 PKG_MAINTAINER:=Tianling Shen <cnsztl@immortalwrt.org>
