--- a/package/emortal/autocore/Makefile
+++ b/package/emortal/autocore/Makefile
@@ -43,13 +43,16 @@ define Package/autocore/install/Default
 
 	$(INSTALL_DIR) $(1)/sbin
 	$(INSTALL_BIN) ./files/generic/cpuinfo $(1)/sbin/
-	$(INSTALL_BIN) ./files/generic/ethinfo $(1)/sbin/
 
 	$(INSTALL_DIR) $(1)/usr/share/rpcd/acl.d
 	$(CP) ./files/generic/luci-mod-status-autocore.json $(1)/usr/share/rpcd/acl.d/
 
+ifeq ($(filter ipq%, $(TARGETID)),)
+	$(INSTALL_BIN) ./files/generic/ethinfo $(1)/sbin/
+
 	$(INSTALL_DIR) $(1)/www/luci-static/resources/view/status/include
 	$(INSTALL_DATA) ./files/generic/21_ethinfo.js $(1)/www/luci-static/resources/view/status/include/
+endif
 endef
 
 define Package/autocore-arm/install
