intel-eth: fix build
Signed-off-by: Tianling Shen <cnsztl@immortalwrt.org>

--- a/package/kernel/ice/Makefile
+++ b/package/kernel/ice/Makefile
@@ -35,6 +35,17 @@ define KernelPackage/ice-vendor/description
   Kernel modules for Intel(R) Ethernet Controller E810 Series
 endef
 
+define Build/Configure
+	( \
+		pushd $(PKG_BUILD_DIR)/src ; \
+		KSRC=$(LINUX_DIR) \
+		OUT=kcompat_generated_defs.h \
+		CONFFILE=$(LINUX_DIR)/include/generated/autoconf.h \
+		bash kcompat-generator.sh ; \
+		popd ; \
+	)
+endef
+
 define Build/Compile
 	+$(KERNEL_MAKE) $(PKG_JOBS) \
 		M=$(PKG_BUILD_DIR)/src \
