--- a/package/kernel/ixgbevf/Makefile
+++ b/package/kernel/ixgbevf/Makefile
@@ -35,6 +35,17 @@ define KernelPackage/ixgbevf-vendor/description
   Kernel modules for Intel(R) 82599 Virtual Function Ethernet adapters.
 endef
 
+define Build/Configure
+	( \
+		pushd $(PKG_BUILD_DIR)/src ; \
+		KSRC=$(LINUX_DIR) \
+		OUT=kcompat_generated_defs.h \
+		CONFFILE=$(LINUX_DIR)/include/generated/autoconf.h \
+		bash kcompat-generator.sh ; \
+		popd ; \
+	)
+endef
+
 define Build/Compile
 	+$(KERNEL_MAKE) $(PKG_JOBS) \
 		M=$(PKG_BUILD_DIR)/src \
