--- a/defconfig/mt7981-ax3000.config
+++ b/defconfig/mt7981-ax3000.config
@@ -250,6 +250,7 @@ CONFIG_PACKAGE_libstdcpp=y
 CONFIG_PACKAGE_libudev-zero=y
 CONFIG_PACKAGE_libuuid=y
 CONFIG_PACKAGE_luci-app-mtk=y
+CONFIG_PACKAGE_luci-app-eqos-mtk=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client is not set
