dnsmasq: remove outdated min-ttl patch
Signed-off-by: Tianling Shen <cnsztl@immortalwrt.org>
(cherry picked from commit 8e1fbfe312f16b1a51c0548cd1e697ce481dda83)
Signed-off-by: dev <dev@idea.lan>

--- a/package/network/services/dnsmasq/files/dhcp.conf
+++ b/package/network/services/dnsmasq/files/dhcp.conf
@@ -23,7 +23,7 @@ config dnsmasq
 	option localservice	1  # disable to allow DNS requests from non-local subnets
 	option filter_aaaa	0
 	option cachesize	8000
-	option mini_ttl		3600
+	option min_cache_ttl	3600
 	option dns_redirect	1
 	option ednspacket_max	1232
 	option filter_aaaa	0
