--- a/defconfig/mt7981-ax3000.config
+++ b/defconfig/mt7981-ax3000.config
@@ -55,6 +55,8 @@ CONFIG_TARGET_DEVICE_mediatek_mt7981_DEVICE_ruijie-rg-x30e-pro-firmware2=y
 CONFIG_TARGET_DEVICE_PACKAGES_mediatek_mt7981_DEVICE_ruijie-rg-x30e-pro-firmware2=""
 CONFIG_TARGET_DEVICE_mediatek_mt7981_DEVICE_ruijie-rg-x30e-pro=y
 CONFIG_TARGET_DEVICE_PACKAGES_mediatek_mt7981_DEVICE_ruijie-rg-x30e-pro=""
+CONFIG_TARGET_DEVICE_mediatek_mt7981_DEVICE_newland_nl-wr8103=y
+CONFIG_TARGET_DEVICE_PACKAGES_mediatek_mt7981_DEVICE_newland_nl-wr8103=""
 CONFIG_DEVEL=y
 CONFIG_TOOLCHAINOPTS=y
 CONFIG_BUSYBOX_CUSTOM=y
