--- a/defconfig/mt7981-ax3000.config
+++ b/defconfig/mt7981-ax3000.config
@@ -15,6 +15,10 @@ CONFIG_TARGET_DEVICE_mediatek_mt7981_DEVICE_glinet_gl-mt2500=y
 CONFIG_TARGET_DEVICE_PACKAGES_mediatek_mt7981_DEVICE_glinet_gl-mt2500=""
 CONFIG_TARGET_DEVICE_mediatek_mt7981_DEVICE_glinet_gl-mt3000=y
 CONFIG_TARGET_DEVICE_PACKAGES_mediatek_mt7981_DEVICE_glinet_gl-mt3000=""
+CONFIG_TARGET_DEVICE_mediatek_mt7981_DEVICE_cmcc_xr30-emmc=y
+CONFIG_TARGET_DEVICE_PACKAGES_mediatek_mt7981_DEVICE_cmcc_xr30-emmc=""
+CONFIG_TARGET_DEVICE_mediatek_mt7981_DEVICE_cmcc_xr30=y
+CONFIG_TARGET_DEVICE_PACKAGES_mediatek_mt7981_DEVICE_cmcc_xr30=""
 CONFIG_TARGET_DEVICE_mediatek_mt7981_DEVICE_h3c_nx30pro=y
 CONFIG_TARGET_DEVICE_PACKAGES_mediatek_mt7981_DEVICE_h3c_nx30pro=""
 CONFIG_TARGET_DEVICE_mediatek_mt7981_DEVICE_honor_fur-602=y
